--- a/index.html
+++ b/index.html
@@ -61,26 +61,30 @@
             letter-spacing: 2px;
             text-align: center;
             padding: 0 20px;
-            margin-bottom: 64px;
+            margin-bottom: 40px;
         }
 
         .menu-buttons {
             display: flex;
             gap: 20px;
-            margin-bottom: 40px;
+            margin-bottom: 30px;
+            width: 90%;
+            max-width: 800px;
         }
 
         .menu-option-btn {
             background-color: #22c55e;
             color: white;
             font-weight: bold;
-            font-size: 32px;
-            padding: 24px 64px;
+            font-size: 28px;
+            padding: 20px 40px;
             border-radius: 16px;
             border: none;
             cursor: pointer;
             box-shadow: 0 10px 40px rgba(0, 0, 0, 0.3);
             transition: all 0.3s;
+            flex: 1;
+            white-space: nowrap;
         }
 
         .menu-option-btn:hover {
@@ -92,13 +96,15 @@
             background-color: #2563eb;
             color: white;
             font-weight: bold;
-            font-size: 32px;
-            padding: 24px 64px;
+            font-size: 28px;
+            padding: 20px 40px;
             border-radius: 16px;
             border: none;
             cursor: pointer;
             box-shadow: 0 10px 40px rgba(0, 0, 0, 0.3);
             transition: all 0.3s;
+            width: 90%;
+            max-width: 800px;
         }
 
         .start-btn:hover:not(:disabled) {
@@ -379,44 +385,187 @@
 
         @media (max-width: 768px) {
             .border-frame {
-                border-width: 40px;
+                border-width: 30px;
             }
 
             .game-title {
-                font-size: 36px;
+                font-size: 32px;
+                margin-bottom: 30px;
+                letter-spacing: 1px;
             }
 
             .menu-buttons {
                 flex-direction: column;
-                gap: 16px;
+                gap: 12px;
+                width: 85%;
             }
 
-            .menu-option-btn, .start-btn {
-                font-size: 24px;
-                padding: 16px 48px;
+            .menu-option-btn {
+                font-size: 18px;
+                padding: 16px 20px;
+                white-space: normal;
+            }
+
+            .start-btn {
+                font-size: 18px;
+                padding: 16px 20px;
+                width: 85%;
             }
 
             .math-expression {
+                font-size: 14px;
+            }
+
+            .modal-content {
+                padding: 32px 24px;
+                margin: 20px;
+                max-width: 90%;
+            }
+
+            .modal-title {
+                font-size: 28px;
+            }
+
+            .modal-text {
+                font-size: 16px;
+            }
+
+            .difficulty-btn {
                 font-size: 18px;
-            }
-
-            .question {
-                font-size: 42px;
-            }
-
-            .answer-btn {
-                font-size: 24px;
                 padding: 16px;
             }
 
-            .game-info {
+            .close-modal-btn {
                 font-size: 18px;
-                padding: 12px 20px;
+                padding: 14px 28px;
+            }
+
+            .question-container {
+                padding: 32px 24px;
+                margin-bottom: 30px;
+                width: 90%;
+            }
+
+            .question {
+                font-size: 36px;
+                margin-bottom: 20px;
+            }
+
+            .answers {
+                width: 90%;
+                gap: 12px;
+            }
+
+            .answer-btn {
+                font-size: 22px;
+                padding: 18px 12px;
+            }
+
+            .game-info {
+                font-size: 16px;
+                padding: 12px 16px;
             }
 
             .game-header {
                 flex-direction: column;
-                gap: 16px;
+                gap: 12px;
+                width: 90%;
+                margin-bottom: 20px;
+            }
+
+            .game-info-container {
+                gap: 12px;
+                width: 100%;
+                justify-content: center;
+            }
+
+            .end-game-btn {
+                font-size: 18px;
+                padding: 14px 28px;
+                width: 100%;
+            }
+
+            .game-over-content {
+                padding: 40px 24px;
+                margin: 20px;
+                max-width: 90%;
+            }
+
+            .game-over-title {
+                font-size: 36px;
+            }
+
+            .final-score {
+                font-size: 32px;
+            }
+
+            .restart-btn {
+                font-size: 22px;
+                padding: 18px 40px;
+            }
+
+            #difficulty-info {
+                font-size: 16px;
+                padding: 0 20px;
+                text-align: center;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .border-frame {
+                border-width: 20px;
+            }
+
+            .game-title {
+                font-size: 24px;
+                margin-bottom: 20px;
+            }
+
+            .menu-buttons {
+                width: 90%;
+                gap: 10px;
+            }
+
+            .menu-option-btn {
+                font-size: 16px;
+                padding: 14px 16px;
+            }
+
+            .start-btn {
+                font-size: 16px;
+                padding: 14px 16px;
+                width: 90%;
+            }
+
+            .question {
+                font-size: 28px;
+            }
+
+            .answer-btn {
+                font-size: 18px;
+                padding: 14px 8px;
+            }
+
+            .game-info {
+                font-size: 14px;
+                padding: 10px 12px;
+            }
+
+            .end-game-btn {
+                font-size: 16px;
+                padding: 12px 20px;
+            }
+
+            .modal-title {
+                font-size: 24px;
+            }
+
+            .game-over-title {
+                font-size: 28px;
+            }
+
+            .final-score {
+                font-size: 28px;
             }
         }
     </style>
